# code_assist

./: .dockerignore  .gitignore  AGENTS.md  Claude.md  Dockerfile  LANGGRAPH_PROTOTYPE.md  README.md  agent.py  agno_assist.py  main.py  package-lock.json  pyproject.toml
archive/: CLAUDE.md  PLAN.md  agent.py  agno_assist.py  main.py  package.json
archive/skills/ppt/: SKILL.md
archive/ui/: package.json
archive/ui/src/app/: layout.tsx  page.tsx
archive/ui/src/components/chat-header/: ChatHeader.tsx
archive/ui/src/components/chat/ChatArea/: ChatArea.tsx  MessageArea.tsx
archive/ui/src/components/chat/Sidebar/: ModelSelector.tsx  Settings.tsx
archive/ui/src/components/ui/icon/: custom-icons.tsx  types.ts
archive/ui/src/lib/: modelProvider.ts
langgraph_assist/: __init__.py  agent.py  app.py  cli.py  memory.py  runlog.py  sandbox.py  tools.py
langgraph_assist/templates/: index.html  signed-out.html
scripts/: docker-entrypoint.sh
skills/excel/: SKILL.md
skills/excel/scripts/: profile_excel.py
skills/ppt/: SKILL.md
skills/ppt/scripts/: create_pptx.js
skills/research/: SKILL.md
skills/word/: SKILL.md
tmp/: agents.db
tools/: visualization_tools.py
ui/: package-lock.json  package.json  tailwind.config.ts
ui/src/: store.ts
ui/src/app/: globals.css
ui/src/components/chat-header/: ChatHeader.tsx
ui/src/components/chat/ChatArea/: ChatArea.tsx
ui/src/components/chat/ChatArea/ChatInput/: ChatInput.tsx
ui/src/components/chat/Sidebar/: ModelSelector.tsx  Settings.tsx  Sidebar.tsx
ui/src/components/ui/icon/: constants.tsx  types.ts
(+8 files in other folders)
