[project]
name = "code-assist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.4.1",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "ollama>=0.6.1",
    "psycopg[binary]>=3.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.34.0",
    "pyjwt>=2.11.0",
    "httpx-sse>=0.4.3",
]
