[project]
name = "code-assist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.11.4",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "httpx>=0.28.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.27",
    "python-pptx>=1.0.2",
    "uvicorn>=0.34.0",
    "itsdangerous>=2.2.0",
    "workos>=7.0.1",
]
